--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.orionlibs</groupId>
-    <artifactId>project-name</artifactId>
+    <artifactId>engimatics</artifactId>
     <version>0.0.1</version>
-    <name>name</name>
-    <description>description</description>
-    <url>https://github.com/orionlibs/project-name</url>
+    <packaging>pom</packaging>
+    <name>Orion EngiMatics</name>
+    <description>Java library providing a one-stop place to gather all your software project metrics along with their analytics</description>
+    <url>https://github.com/orionlibs/engimatics</url>
+
+
+    <modules>
+        <module>engimatics-core</module>
+        <module>engimatics-issue-management</module>
+    </modules>
     
     
     <properties>
@@ -17,9 +24,9 @@
 
 
     <scm>
-        <url>https://github.com/orionlibs/project-name</url>
-        <connection>scm:git:https://github.com/orionlibs/project-name.git</connection>
-        <developerConnection>scm:git:ssh://github.com/orionlibs/project-name.git</developerConnection>
+        <url>https://github.com/orionlibs/orion-engimatics</url>
+        <connection>scm:git:https://github.com/orionlibs/orion-engimatics.git</connection>
+        <developerConnection>scm:git:ssh://github.com/orionlibs/orion-engimatics.git</developerConnection>
     </scm>
 
 
@@ -217,6 +224,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>io.github.orionlibs</groupId>
+                <artifactId>engimatics-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
                 <version>5.9.3</version>
@@ -252,20 +266,6 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.20.2</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.4.0</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>5.2.0</version>
         </dependency>
     </dependencies>
 </project>
